@@ -37,11 +37,10 @@ class TestWEBrickCGI < Test::Unit::TestCase
       http.request(req){|res| assert_equal("/path/info", res.body, log.call)}
       req = Net::HTTP::Get.new("/webrick.cgi/%3F%3F%3F?foo=bar")
       http.request(req){|res| assert_equal("/???", res.body, log.call)}
-      req = Net::HTTP::Get.new("/webrick.cgi/%A4%DB%A4%B2/%A4%DB%A4%B2")
-      # Path info of res.body is passed via ENV.
-      # ENV[] returns different value on Windows depending on locale.
-      unless RUBY_PLATFORM =~ /mswin|mingw|cygwin|bccwin32/ &&
-             Encoding.find("locale") != Encoding.find("filesystem")
+      unless RUBY_PLATFORM =~ /mswin|mingw|cygwin|bccwin32/
+        # Path info of res.body is passed via ENV.
+        # ENV[] returns different value on Windows depending on locale.
+        req = Net::HTTP::Get.new("/webrick.cgi/%A4%DB%A4%B2/%A4%DB%A4%B2")
         http.request(req){|res|
           assert_equal("/\xA4\xDB\xA4\xB2/\xA4\xDB\xA4\xB2", res.body, log.call)}
       end
